--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -75,85 +75,6 @@
     </nav>
     <!-- NEW NAVBAR -->
 
-    <!-- HERO SECTION -->
-    <!-- <section class="hero">
-      <div id="content-hero">
-        <span id="title-hero" class="animate__animated animate__backInDown">
-          Automatizá tus videos.
-        </span>
-        <h3 id="foot-hero" class="animate__animated animate__fadeIn">
-          Transforma tus ideas en vídeos únicos y cautivadores. Da rienda suelta
-          a tu creatividad y deja que tus historias brillen como nunca antes.
-        </h3>
-      </div>
-      <a id="link-hero" href="/index" class="animate__animated animate__bounce"
-        >Prueba ClipgenAI</a
-      >
-    </section> -->
-    <!-- HERO SECTION -->
-
-    <!-- BENEFITS SECTION -->
-    <!-- <section class="benefits">
-      <div class="cards-benefits-container">
-        <div class="card-benefit">
-          <h3>Personalización</h3>
-          <img src="{% static 'img/clipgen.ai logo.png' %}" alt="Logo" />
-          <p>
-            Personaliza tus videos con una amplia variedad de plantillas y
-            efectos.
-          </p>
-        </div>
-        <div class="card-benefit">
-          <h3>Automatización</h3>
-          <img src="{% static 'img/clipgen.ai logo.png' %}" alt="Logo" />
-          <p>
-            Velocidad asegurada para mayor provecho y menos perdida de tiempo.
-          </p>
-          <div class="container-start">
-            <img
-              width="36"
-              height="36"
-              src="https://img.icons8.com/fluency/50/star.png"
-              alt="star"
-            />
-            <img
-              width="36"
-              height="36"
-              src="https://img.icons8.com/fluency/50/star.png"
-              alt="star"
-            />
-            <img
-              width="36"
-              height="36"
-              src="https://img.icons8.com/fluency/50/star.png"
-              alt="star"
-            />
-            <img
-              width="36"
-              height="36"
-              src="https://img.icons8.com/fluency/50/star.png"
-              alt="star"
-            />
-            <img
-              width="36"
-              height="36"
-              src="https://img.icons8.com/fluency/50/star.png"
-              alt="star"
-            />
-          </div>
-        </div>
-        <div class="card-benefit">
-          <h3>Exportación</h3>
-          <img src="{% static 'img/clipgen.ai logo.png' %}" alt="Logo" />
-          <p>
-            Exporta tus videos en alta calidad y compártelos en tus redes
-            sociales.
-          </p>
-        </div>
-      </div>
-    </section> -->
-    <!-- BENEFITS SECTION -->
-
     <!-- LOGIN SECTION -->
     <section id="login-section" class="animate__animated animate__fadeIn">
       <span id="close-modal-login" onclick="showLogin()"
@@ -295,6 +216,7 @@
     <script src="{% static 'main/js/panelCancel.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/nprogress@0.2.0/nprogress.js"></script>
     <script src="{% static 'main/js/init.js' %}"></script>
+    <script src="{% static 'main/js/landing.js' %}"></script>
 
     <!-- <script>
       document.addEventListener("DOMContentLoaded", function () {
