--- a/static/main/css/Hero/hero.css
+++ b/static/main/css/Hero/hero.css
@@ -1,55 +1,68 @@
-
 /* HERO SECTION */
 .hero {
-    min-height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    padding: 10px;
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  padding: 10px;
+  background-color: black;
+}
 
-  }
+#content-hero {
+  margin-top: 120px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: black;
+}
 
-  #content-hero {
-    margin-top: 100px;
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-  }
+#title-hero {
+  text-align: center;
+  font-family: var(--main);
+  font-weight: bold;
+  font-size: 4rem;
+}
 
-  #title-hero {
-    font-family: var(--main);
-    font-weight: bold;
-    font-size: 65px;
-    text-align: right;
-    color: var(--greenFull3);
-  }
+#title-hero > strong {
+  background: linear-gradient(
+      to right,
+      var(--greenFull3),
+      var(--greenFull2) 85%,
+      white
+    )
+    97%;
+  background-size: cover;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
-  #foot-hero {
-    text-align: right;
-    color: white;
-    font-family: var(--second);
-    font-weight: bold;
-    font-size: 40px;
-    font-weight: 200;
-  }
+#foot-hero {
+  text-align: center;
+  color: white;
+  font-family: var(--second);
+  font-weight: bold;
+  font-size: 40px;
+  font-weight: 200;
+}
 
-  #link-hero {
-    margin-top: 45px;
-    padding: 10px 20px;
-    border-radius: 5px;
-    background-color: var(--greenFull3);
-    color: black;
-    font-family: var(--main);
-    transition: 0.2s;
-    font-weight: bold;
-  }
+#link-hero {
+  margin-top: 45px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: var(--greenFull3);
+  color: black;
+  font-family: var(--main);
+  transition: 0.2s;
+  font-weight: bold;
+}
 
-  #link-hero:hover {
-    transition: 0.6s;
-    background-color: white;
-  }
+#link-hero:hover {
+  transition: 0.6s;
+  background-color: white;
+}
 
-  
-  /* HERO SECTION */
+/* HERO SECTION */
