--- a/static/main/css/login.css
+++ b/static/main/css/login.css
@@ -161,15 +161,17 @@
   gap: 10px;
   top: 10px;
   left: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #logo-auth-container > img {
   width: 50px;
 }
 #logo-auth-container > h1 {
-  font-family: var(--main);
-  -webkit-text-stroke: 2px black;
-  color: white;
+  font-family: var(--four);
+  color: var(--greenFull3);
   font-size: 35px;
   font-weight: bolder;
 }
