--- a/templates/main/sobre.html
+++ b/templates/main/sobre.html
@@ -1,11 +1,96 @@
-{% extends "main/base.html" %}
-{% load static %}
-
-{% block title %}Sobre Clipgen.ai{% endblock %}
-
-{% block content %}
+{% extends "main/base.html" %} {% load static %} {% block title %}Sobre
+Clipgen.ai{% endblock %} {% block content %}
 <section class="sobre-section">
-    <h1>Sobre Clipgen.ai</h1>
-    <p>Aquí vamos a agregar informacion sobre la aplicacion.</p>
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <div id="content-hero">
+      <span id="title-hero" class="animate__animated animate__backInDown">
+        Descubre la verdadera <strong>automatizacion</strong> de Youtube.
+      </span>
+      <h3 id="foot-hero" class="animate__animated animate__fadeIn">
+        crea canales y vídeos sin límites desde cualquier lugar sin gastar una
+        fortuna en editores caros y lentos.
+      </h3>
+    </div>
+    <a id="link-hero" href="/index" class="animate__animated animate__bounce"
+      >Prueba ClipgenAI</a
+    >
+  </section>
+  <!-- HERO SECTION -->
+  <!-- BENEFITS SECTION -->
+  <section id="benefits" class="benefits">
+    <div class="cards-benefits-container">
+      <div class="card-benefit animate__animated">
+        <h3>Personalización</h3>
+        <img
+          width="96"
+          height="96"
+          src="https://img.icons8.com/bubbles/100/support.png"
+          alt="support"
+        />
+        <p>
+          Personaliza tus videos con una amplia variedad de plantillas y
+          efectos.
+        </p>
+      </div>
+      <div class="card-benefit animate__animated">
+        <h3>Escalabilidad</h3>
+        <img
+          width="96"
+          height="96"
+          src="https://img.icons8.com/color/96/fast-download.png"
+          alt="fast-download"
+        />
+        <p>
+          Acelera tu produccion como nunca antes
+        </p>
+        <div class="container-start">
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+        </div>
+      </div>
+      <div class="card-benefit animate__animated">
+        <h3>Escalabilidad</h3>
+        <img
+          width="96"
+          height="96"
+          src="https://img.icons8.com/external-goofy-flat-kerismaker/96/external-Export-logistic-goofy-flat-kerismaker.png"
+          alt="external-Export-logistic-goofy-flat-kerismaker"
+        />
+        <p>
+          Crea tantos canales como quieras y aumenta tus ingresos de manera exponencial
+        </p>
+      </div>
+    </div>
+  </section>
+  <!-- BENEFITS SECTION -->
 </section>
 {% endblock %}
