--- a/templates/main/sobre.html
+++ b/templates/main/sobre.html
@@ -17,6 +17,99 @@ Clipgen.ai{% endblock %} {% block content %}
     >
   </section>
   <!-- HERO SECTION -->
+  <!-- CARRUSEL PHOTOS SECTION -->
+  <section class="carrusel-section">
+    <h3 id="title-carrusel">
+      Crea <strong>videos</strong> <strong>sorprendentes</strong>
+    </h3>
+    <div id="carrusel-track">
+      <div class="carrusel-container animate__animated">
+        <div class="carrusel-img simple-one">
+          <img src="{% static 'img/carrusel/ej1.jpg' %}" alt="Carrusel photo" />
+        </div>
+        <div class="carrusel-img simple-two">
+          <img src="{% static 'img/carrusel/ej2.jpg' %}" alt="Carrusel photo" />
+        </div>
+        <div class="carrusel-img double">
+          <img
+            src="{% static 'img/carrusel/ej4-100.jpg' %}"
+            alt="Carrusel photo"
+          />
+        </div>
+        <div class="carrusel-img simple-three">
+          <img src="{% static 'img/carrusel/ej3.jpg' %}" alt="Carrusel photo" />
+        </div>
+        <div class="carrusel-img simple-four">
+          <img
+            src="{% static 'img/carrusel/ej6-100.jpg' %}"
+            alt="Carrusel photo"
+          />
+        </div>
+        <div class="carrusel-img double-two">
+          <img src="{% static 'img/carrusel/ej5.jpg' %}" alt="Carrusel photo" />
+        </div>
+      </div>
+      
+      <div class="carrusel-container animate__animated">
+        <div class="carrusel-img simple-one">
+          <img src="{% static 'img/carrusel/ej1.jpg' %}" alt="Carrusel photo" />
+        </div>
+        <div class="carrusel-img simple-two">
+          <img src="{% static 'img/carrusel/ej2.jpg' %}" alt="Carrusel photo" />
+        </div>
+        <div class="carrusel-img double">
+          <img
+            src="{% static 'img/carrusel/ej4-100.jpg' %}"
+            alt="Carrusel photo"
+          />
+        </div>
+        <div class="carrusel-img simple-three">
+          <img src="{% static 'img/carrusel/ej3.jpg' %}" alt="Carrusel photo" />
+        </div>
+        <div class="carrusel-img simple-four">
+          <img
+            src="{% static 'img/carrusel/ej6-100.jpg' %}"
+            alt="Carrusel photo"
+          />
+        </div>
+        <div class="carrusel-img double-two">
+          <img src="{% static 'img/carrusel/ej5.jpg' %}" alt="Carrusel photo" />
+        </div>
+      </div>
+
+      <div class="carrusel-container animate__animated">
+        <div class="carrusel-img simple-one">
+          <img src="{% static 'img/carrusel/ej1.jpg' %}" alt="Carrusel photo" />
+        </div>
+        <div class="carrusel-img simple-two">
+          <img src="{% static 'img/carrusel/ej2.jpg' %}" alt="Carrusel photo" />
+        </div>
+        <div class="carrusel-img double">
+          <img
+            src="{% static 'img/carrusel/ej4-100.jpg' %}"
+            alt="Carrusel photo"
+          />
+        </div>
+        <div class="carrusel-img simple-three">
+          <img src="{% static 'img/carrusel/ej3.jpg' %}" alt="Carrusel photo" />
+        </div>
+        <div class="carrusel-img simple-four">
+          <img
+            src="{% static 'img/carrusel/ej6-100.jpg' %}"
+            alt="Carrusel photo"
+          />
+        </div>
+        <div class="carrusel-img double-two">
+          <img src="{% static 'img/carrusel/ej5.jpg' %}" alt="Carrusel photo" />
+        </div>
+      </div>
+    </div>
+    <div class="carrusel-buttons-container">
+      <span id="btn-backward-container" class="button-carrusel-container"><i class="fa-solid fa-arrow-left"></i></span>
+      <span id="btn-next-container" class="button-carrusel-container"><i class="fa-solid fa-arrow-right"></i></span>
+    </div>
+  </section>
+  <!-- CARRUSEL PHOTOS SECTION -->
   <!-- BENEFITS SECTION -->
   <section id="benefits" class="benefits">
     <div class="cards-benefits-container">
@@ -32,6 +125,39 @@ Clipgen.ai{% endblock %} {% block content %}
           Personaliza tus videos con una amplia variedad de plantillas y
           efectos.
         </p>
+
+        <div class="container-start">
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+        </div>
       </div>
       <div class="card-benefit animate__animated">
         <h3>Escalabilidad</h3>
@@ -41,9 +167,7 @@ Clipgen.ai{% endblock %} {% block content %}
           src="https://img.icons8.com/color/96/fast-download.png"
           alt="fast-download"
         />
-        <p>
-          Acelera tu produccion como nunca antes
-        </p>
+        <p>Acelera tu produccion como nunca antes</p>
         <div class="container-start">
           <img
             width="36"
@@ -86,8 +210,41 @@ Clipgen.ai{% endblock %} {% block content %}
           alt="external-Export-logistic-goofy-flat-kerismaker"
         />
         <p>
-          Crea tantos canales como quieras y aumenta tus ingresos de manera exponencial
+          Crea tantos canales como quieras y aumenta tus ingresos de manera
+          exponencial
         </p>
+        <div class="container-start">
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+          <img
+            width="36"
+            height="36"
+            src="https://img.icons8.com/fluency/50/star.png"
+            alt="star"
+          />
+        </div>
       </div>
     </div>
   </section>
