--- a/static/main/css/Benefits-Section/benefits.css
+++ b/static/main/css/Benefits-Section/benefits.css
@@ -7,25 +7,27 @@
   justify-content: center;
   gap: 25px;
   padding: 10px;
-  min-height: 100vh;
-  max-width: 80vw;
+  width: 100%;
   margin: 0 auto;
+  background-color: black;
+  padding: 100px 0;
 }
 
 .cards-benefits-container {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   position: relative;
   gap: 10px;
 }
 
 .card-benefit {
-  border: 3px solid var(--greenFull3);
+  border: 1px solid var(--greenFull3);
   border-radius: 4px;
   padding: 25px;
   background: transparent;
-  height: 280px;
+  height: 370px;
   width: 400px;
   display: flex;
   flex-direction: column;
@@ -41,7 +43,7 @@
   justify-content: center;
   width: 80%;
   position: absolute;
-  bottom: -45px;
+  top: 65px;
   gap: 7px;
 }
 
@@ -55,7 +57,7 @@
   padding: 20px;
   text-align: center;
   border: 1px solid var(--greenFull3);
-  background-color: var(--blackPanel);
+  background-color: black;
   border-radius: 7px;
   font-weight: bolder;
   position: absolute;
