--- a/static/main/css/Navbar/navbar.css
+++ b/static/main/css/Navbar/navbar.css
@@ -3,10 +3,9 @@ nav {
   width: 100%;
   padding: 5px 0;
   position: fixed;
-  backdrop-filter: blur(25px) saturate(200%);
-  -webkit-backdrop-filter: blur(25px) saturate(200%);
-  background-color: rgb(37, 37, 37);
-  border-bottom: 1px solid var(--blackPanel);
+  backdrop-filter: blur(25px) saturate(180%);
+  -webkit-backdrop-filter: blur(25px) saturate(180%);
+  background-color: rgba(2, 2, 2, 0);
   top: 0;
   display: flex;
   justify-content: space-between;
